# PhotoEditor

./: CMakeLists.txt  main.cpp
